JEDIT 4.1 VERSION HISTORY

* Version 4.1pre8

Thanks to Chris Petersen, Jonathan Revusky and Silas Smith for
contributing to this release.

+ Miscellaneous Changes:

- Icon syntax highlighting (Silas Smith).

- Minor updates to JavaScript and PHP modes (Chris Petersen).

- Updated Freemaker syntax highlighting (Jonathan Revusky).

- Plugin manager progress window now only has one progress bar.

- In the file system browser, S+ENTER with a directory selected opens
  the directory in a new browser window.

- Pressing LEFT in the filename field with the caret already at the
  left-most position goes to the parent directory location.

- Added View->Show Buffer Switcher command (shortcut: A+BACK_QUOTE). It
  shows the buffer switcher combo box if it is enabled.

- Improved scrolling performance when soft wrap is on. In previous 4.1
  pre-releases and especially in 4.0, the editor was noticably less
  responsive if soft wrap was on. No longer.

- NEWS.txt now documents major changes between jEdit 4.0 and 4.1.

- Added some more tips of the day.

+ Bug Fixes:

- Sometimes the status bar was not updated properly in newly created
  views.

- Fixed a few help viewer quirks.

- Fixed an obscure bug in the text area scrolling code that could
  manifest when the same buffer was viewed in multiple text areas.

- Fixed Global Options dialog box resizing problems.

- Fixed possible ArrayIndexOutOfBoundsExceptions when deleting text.

- Fixed various minor bugs with the "Format Paragraph" command.

- Fixed some popup menu display bugs.

* Version 4.1pre7

Thanks to Chris Kent, Jonathan Revusky and Marcelo Vanzin for
contributing to this release.

+ Syntax Highlighting Changes:

- Freemaker syntax highlighting (Jonathan Revusky).

+ User Interface Changes:

- The parent directory list in the file system browser now requires a
  double-click (or middle mouse button click) to open a directory. This
  makes it consistent with the behavior of the file tree below it, which